--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -13,4 +13,5 @@ sha256Matcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
 jdbcRealm.credentialsMatcher = $sha256Matcher
 
 [urls]
-/** = authcBasic
+/ = authcBasic
+/localWrites/** = anon
